# TailTest

./: .gitignore  CMakeLists.txt  README.md  main.cpp  utils.h
machines/: builders.cpp  builders.h  containment_relation.cpp  containment_relation.h  incompatibility_data.cpp  incompatibility_data.h  input_tree.cpp  input_tree.h  machines.cpp  machines.h  quotient.cpp  quotient.h  serializer.cpp  serializer.h
testers/: advanced.cpp  advanced.h  basic.cpp  basic.h
